--- a/index.html
+++ b/index.html
@@ -595,5 +595,11 @@
   slidesToScroll: 1
 });
 	</script>
+	<script>
+        // Disable right-click functionality
+        document.addEventListener('contextmenu', function(event) {
+            event.preventDefault();
+        });
+    </script>
 </body>
 </html>
